@@ -13,6 +13,7 @@ Thanks!
 - Added Simplified Chinese localisation. (Thanks to Arsen Liang).
 - Don't create a new article if the only difference is the article link.
 - Fix bug: article list rows were too small for text.
+- Fix bug: next unread command didn't respect folder unexpanded state.
 
 2.1.0.2105
 ----------
